@@ -710,7 +710,6 @@ If the buffer runs `dired', the buffer is reverted."
 
 ;; This function takes action, when `read-extended-command-predicate'
 ;; is set to `command-completion-default-include-p'.
-;;;###autoload
 (defun tramp-dired-buffer-command-completion-p (_symbol buffer)
   "A predicate for Tramp interactive commands.
 They are completed by `M-x TAB' only in Dired buffers."
@@ -722,10 +721,16 @@ They are completed by `M-x TAB' only in Dired buffers."
 (defun tramp-dired-find-file-with-sudo ()
   "In Dired, visit the file or directory named on this line.
 This is performed with \"sudo\" permissions."
-  (declare (completion tramp-dired-buffer-command-completion-p))
+  ;; (declare (completion tramp-dired-buffer-command-completion-p))
   (interactive)
   (with-tramp-file-name-with-method
     (find-file (tramp-file-name-with-sudo (dired-get-file-for-visit)))))
+
+;; `tramp-dired-buffer-command-completion-p' is not autoloaded, and this
+;; setting isn't either.
+(function-put
+ #'tramp-dired-find-file-with-sudo 'completion-predicate
+ #'tramp-dired-buffer-command-completion-p)
 
 ;;; Recompile on ELPA
 
